--- a/About us.html
+++ b/About us.html
@@ -21,8 +21,8 @@
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="Aboutus.html">About Us</a></li>
             <li><a href="lifeinieee.html">Life in IEEE</a></li>
-			<li><a href="upcoming.html">Upcoming Events</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="upcomingevent.html">Upcoming Events</a></li>
+			<li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>    
@@ -35,7 +35,7 @@
     <section id="about">
       <div id="section">
    <div style="margin-bottom:10px; padding:0px 50px;">
-       <h1><span style="text-align:left;"> About IEEE Curtin Sarawak</span></h1>
+       <h1>About IEEE Curtin Sarawak</h1>
        <h2> Vision </h2>
         <p>
           IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of
@@ -109,7 +109,7 @@ technological advancement for the better future!<p>
           <img src="./img/award.png">
           <h3>2016</h3>
           <p>IEEE MALAYSIA SECTION</p>
-		  <p>Outstanding Student Branch Award</p>
+		  <p>2016 Outstanding Student Branch Award</p>
         </div>
         <div class="box">
           <img src="./img/award.png">
@@ -121,7 +121,7 @@ technological advancement for the better future!<p>
     </section>
 
     <footer>
-      <p>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED</p>
+      <h5>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED</h5>
     </footer>
   </body>
 </html>
