--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="About us.html">About Us</a></li>
             <li><a href="lifeinieee.html">Life in IEEE</a></li>
-			<li><a href="upcoming.html">Upcoming Events</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="upcomingevent.html">Upcoming Events</a></li>
+			<li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>    
@@ -35,8 +35,9 @@
 
     <section id="showcase">
       <div class="container">
+	  <h2>WELCOME TO IEEE CURTIN SARAWAK STUDENT BRANCH</h2>
 	  <img src="./img/IEEEFamily.jpg">
-        <h2>WELCOME TO IEEE CURTIN SARAWAK STUDENT BRANCH</h2>
+        
       </div>
     </section>
 
@@ -64,7 +65,7 @@
           <img src="./img/award.png">
           <h3>2016</h3>
           <p>IEEE MALAYSIA SECTION</p>
-		  <p>Outstanding Student Branch Award</p>
+		  <p>2016 Outstanding Student Branch Award</p>
         </div>
         <div class="box">
           <img src="./img/award.png">
@@ -76,7 +77,7 @@
     </section>
 
     <footer>
-      <p>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED</p>
+      <h5>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED<h5>
     </footer>
   </body>
 </html>
