--- a/lifeinieee.html
+++ b/lifeinieee.html
@@ -22,8 +22,8 @@
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="About us.html">About Us</a></li>
             <li><a href="lifeinieee.html">Life in IEEE</a></li>
-			<li><a href="upcoming.html">Upcoming Events</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="upcomingevent.html">Upcoming Events</a></li>
+			<li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>    
@@ -33,10 +33,10 @@
       </div>
     </header>
 
-    <section id="life">
+ <section id="life">
       <div class="lifeinieee">
 	  <div style="margin-bottom:10px; padding:0px 50px;">
-       <h1><span>Our Life in IEEE</span></h1>
+       <h1>Our Life in IEEE</h1>
 	  </div>
 	  <div>
 	  <iframe width="711" height="400" src="https://www.youtube-nocookie.com/embed/hpSXXYOTzCo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
@@ -44,13 +44,117 @@
                      and activities are conducted successfully in the past. <br> More great things are yet to come.</span></h3>
 	  
 	  </div>
-	  
-	  
-	  
+	  </div>
+<div id="littlecontainer">
+   <div id="section2">
+    <div>
+        <img class="pic" src="img/arduinoworkshop.jpg" alt="photo1"> 
+            <div style="text-align:left;padding:10px;">
+            <h4> Advanced Arduino Workshop 2017</h4>
+             <p> Every year, IEEE organizes arduino workshops for IEEE members and non-members. 
+                 Advanced arduino workshops are created for those who wish to learn more from basic arduino workshops. 
+                 Afterall, innovation is what drives them forward.</p>
+            </div>
+    </div>
+   </div>
+
+   <div id="section3">
+    <div>
+        <img class="pic1" src="img/projectexhibition.jpg" alt="photo2"> 
+            <div style="text-align:left;padding:10px;"> 
+            <h4> Project Exhibition</h4>
+             <p> IEEE members always come out with mysterious and interesting projects. 
+                 That is why we let those who are keen to innovate and showcast their projects on exhibition day. 
+                 Anything you can imagine and build. What will you make out of it?</p>
+            </div> 
+    </div>
+   </div>
+<!-- section 4 left side panel -->    
+<div id="section4">
+    <div>
+        <img class="pic2" src="img/sitevisitkuching.jpg" alt="photoside"> 
+             <div style="text-align:center;padding:10px;">
+            <h4> Site Visit in Kuching 2016</h4>
+             <p> Having site visits help IEEE members to gain broader insights on what is in store in the outside world.
+                 This year, IEEE curtin sarawak has made a site visit to X-FAB sarawak in Kuching.</p>
+             </div>
+    </div>
+</div>
+<!-- section5 middle full panel -->
+<div id="section5">
+    <div>
+        <img class="pic3" src="img/extreme10.0.jpg" alt="photo3">
+            <div style="text-align:left; padding:10px;">
+            <h4> IEEEXtreme 10.0 2016</h4>
+             <p> IEEEXtreme 10.0 is just as extreme as it sounded. 
+                 International members from universities all around the world challenges against head scratching programming questions under 24 hours. 
+                 Curtin Sarawak happens to have some daredevils participating in this event.</p>
+            </div>
+    </div>
+</div>
+
+<div id="section6">
+    <div>
+        <img class="pic4" src="img/IEEEnight.jpg" alt="photo4"> 
+            <div style="text-align:left;padding:10px;">
+            <h4> IEEE Night 2016</h4>
+            <p> IEEE Members and non-members had an exhilarating evening in IEEE Night organized by Curtin IEEE student branch in Curtin Sarawak. 
+                 Exciting activities happened that night are games,  microphone sessions, performances and member inductions.</p>
+            </div>
+    </div>
+</div>
+
+<div id="section7">
+    <div>
+        <img class="pic5" src="img/solarbusstop.jpg" alt="photo5"> 
+            <div style="text-align:left;padding:10px;"> 
+            <h4> Solar Bus Stop</h4>
+             <p> Do you remember those nights when you just have to go to those dark bus stops? 
+                 We are happy to let you know, with the recent installment of solar powered lights to the 
+                 bus stops near Curtin Sarawak by the IEEE members, the nights now are light up as bright as the day at the bus stops.</p>
+            </div>
+    </div>
+</div>
+<!-- section8 left side panel -->
+<div id="section8">
+    <div>
+        <img class="pic6" src="img/techmentor.jpg" alt="photo6"> 
+            <div style="text-align:center;padding:10px;"> 
+            <h4> Tech Mentor Workshop</h4>
+             <p> Tech Mentor Workshop is about preparing mentors to guide high school student for Arduino Programming. 
+                 These mentors are trained with the basic of Arduino Programming, 
+                 they are needed to pass on the knowledge to the high school students and guide them to produce an Arduino Project.</p>
+            </div>
+    </div>
+</div>
+<div id="section9">
+    <div>
+        <img class="pic7" src="img/teambuilding.jpg" alt="photo7"> 
+            <div style="text-align:left; padding:10px;">
+            <h4> Team Building</h4>
+             <p> Team building is an event for IEEE committees to strengthen the bond between each other.
+			 The committees can know more about each other during the event. Some interesting activities were happened such as games sessions, funny Q n A session
+			 and others.</p>
+            </div>
+    </div>
+</div>
+<div id="section10">
+    <div>
+        <img class="pic8" src="img/bootcamp.jpg" alt="photo8"> 
+            <div style="text-align:left; padding:10px;">
+            <h4>Boot Camp 2017</h4>
+             <p> Boot camp is a advanced Arduino workshop for the students from secondary schools. It is prepared for them in order to know more about the
+			 basic knowledge of Arduino. After that, the students will create their own projects according the challenges they chose and show thiere
+			 projects during Young Innovate Challenge.</p>
+            </div>
+    </div>
+</div>
+</div>
     </section>
 
     <section id="newsletter">
       <div class="container">
+	  
         <h1>Join as IEEE Family</h1>
         <form>
           
@@ -73,7 +177,7 @@
           <img src="./img/award.png">
           <h3>2016</h3>
           <p>IEEE MALAYSIA SECTION</p>
-		  <p>Outstanding Student Branch Award</p>
+		  <p>2016 Outstanding Student Branch Award</p>
         </div>
         <div class="box">
           <img src="./img/award.png">
@@ -85,7 +189,7 @@
     </section>
 
     <footer>
-      <p>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED</p>
+      <h5>COPYRIGHT &copy; 2017 IEEE CURTIN SARAWAK ALL RIGHT RESERVED</h5>
     </footer>
   </body>
 </html>
